<resources>
    <string name="app_name">OrderKKT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adres">Адрес: </string>
    <string name="phone">Телефон:</string>
    <string name="contact">Клиент:</string>
    <string name="yandex_disk">Настройка Облака</string>
    <string name="name">Имя</string>
    <string name="ip">IP_адрес</string>
    <string name="port">Порт</string>
    <string name="settings">Настройки</string>
    <string name="summ">Итого</string>
    <string name="input_cash">Оплата</string>
    <string name="curer">Введите имя курьера</string>
    <string name="phone_call">Позвонить</string>
    <string name="x_report">X-отчет</string>
    <string name="searDevice">Поиск устройства</string>
    <string name="scaning">Сканирование</string>
    <string name="atol_settings">Настройка свойств</string>
    <string name="Returns">Возврат</string>
    <string-array name="KKT">
        <item>Нет</item>
        <item>Штрих-М (LAN)</item>
        <item>Штрих-М bluetooth</item>
        <item>ATOL</item>
    </string-array>
    <string-array name="note">
        <item>Нет денег</item>
        <item>Передумали</item>
        <item>Не понравился заказ</item>
        <item>Никого небыло дома</item>
        <item>Другое</item>
    </string-array>
</resources>
