<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
              android:orientation="vertical"
             android:layout_height="match_parent"
             tools:context=".Fragment.SettigsFragment">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:textSize="20sp"
    android:layout_marginRight="10dp"
    android:text="@string/name"/>
<EditText
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:id="@+id/contact_name"
    android:hint="@string/curer"
    android:layout_marginRight="10dp"
    android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:id="@+id/yandex_login"
        android:text="@string/yandex_disk"
        android:layout_height="wrap_content"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:entries="@array/KKT"
        android:id="@+id/KKT_type"/>
    <include layout="@layout/sthrih_lan"
      />
    <include layout="@layout/strih_blutooh"/>
    <include layout="@layout/atol_settings"/>

</LinearLayout>